--- a/.project
+++ b/.project
@@ -31,6 +31,21 @@
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_CodeStartBranch.asm</location>
 		</link>
 		<link>
+			<name>bsp/F2837xD_DefaultISR.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_DefaultISR.c</location>
+		</link>
+		<link>
+			<name>bsp/F2837xD_EPwm.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_EPwm.c</location>
+		</link>
+		<link>
+			<name>bsp/F2837xD_EQep.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_EQep.c</location>
+		</link>
+		<link>
 			<name>bsp/F2837xD_GlobalVariableDefs.c</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/headers/source/F2837xD_GlobalVariableDefs.c</location>
@@ -44,6 +59,16 @@
 			<name>bsp/F2837xD_Ipc.c</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_Ipc.c</location>
+		</link>
+		<link>
+			<name>bsp/F2837xD_PieCtrl.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_PieCtrl.c</location>
+		</link>
+		<link>
+			<name>bsp/F2837xD_PieVect.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_PieVect.c</location>
 		</link>
 		<link>
 			<name>bsp/F2837xD_SysCtrl.c</name>
