--- a/.project
+++ b/.project
@@ -26,6 +26,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>bsp/F2837xD_Adc.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_Adc.c</location>
+		</link>
+		<link>
 			<name>bsp/F2837xD_CodeStartBranch.asm</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_CodeStartBranch.asm</location>
