--- a/.cproject
+++ b/.cproject
@@ -41,6 +41,8 @@
 								<option id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.TMU_SUPPORT.1310195149" name="Specify TMU support (--tmu_support)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.TMU_SUPPORT" value="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.TMU_SUPPORT.tmu0" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH.220372033" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
+									<listOptionValue builtIn="false" value="C:\Users\Master\Desktop\ccs_extraction\!qepm_e\drivers\inc"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/drivers/inc}"/>
 									<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\libraries\math\IQmath\c28\include"/>
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}/hal/inc"/>
 									<listOptionValue builtIn="false" value="${C2000_SDK_DIR}\device_support\f2837xd\headers\include"/>
@@ -51,6 +53,7 @@
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE.1994094565" name="Specify a preinclude file (--preinclude)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE" valueType="includeFiles">
 									<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\common\include\F2837xD_defaultisr.h"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/drivers/inc/encoder.h}"/>
 									<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\headers\include\F2837xD_dac.h"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/F2837xD_device.h}"/>
 									<listOptionValue builtIn="false" value="C:\Users\Master\Desktop\ccs_extraction\!qepm_e\hal\inc\dac_hal.h"/>
@@ -129,6 +132,7 @@
 						<tool id="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.1487603176" name="C2000 Compiler" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951">
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH.472886763" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH" valueType="includePath">
 								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e"/>
+								<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/drivers/inc}"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\libraries\math\IQmath\c28\include"/>
 								<listOptionValue builtIn="false" value="${PROJECT_LOC}/hal/inc"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\common\include"/>
@@ -166,6 +170,23 @@
 								<additionalInput kind="additionalinputdependency" paths=""/>
 							</inputType>
 							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.1381932375.550273224.649336065.1901880732.1422784106.792490279" name="Resource Custom Build Step Output Type"/>
+						</tool>
+					</fileInfo>
+					<fileInfo id="com.ti.ccstudio.buildDefinitions.C2000.Debug.884053973.356824951" name="control.c" rcbsApplicability="disable" resourcePath="drivers/src/control.c" toolsToInvoke="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.515006634">
+						<tool id="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.515006634" name="C2000 Compiler" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951">
+							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH.331980806" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH" valueType="includePath">
+								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e"/>
+								<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/drivers/inc}"/>
+								<listOptionValue builtIn="false" value="C:/ti/c2000/C2000Ware_4_03_00_00/libraries/math/IQmath/c28/include"/>
+								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e/hal/inc"/>
+								<listOptionValue builtIn="false" value="C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/headers/include"/>
+								<listOptionValue builtIn="false" value="C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/include"/>
+								<listOptionValue builtIn="false" value="C:/ti/ccs1220/ccs/tools/compiler/ti-cgt-c2000_22.6.0.LTS/include"/>
+							</option>
+							<inputType id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__C_SRCS.1159760403" name="C Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__C_SRCS"/>
+							<inputType id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__CPP_SRCS.210762277" name="C++ Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__CPP_SRCS"/>
+							<inputType id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__ASM_SRCS.1333907799" name="Assembly Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__ASM_SRCS"/>
+							<inputType id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__ASM2_SRCS.1821383666" name="Assembly Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compiler.inputType__ASM2_SRCS"/>
 						</tool>
 					</fileInfo>
 					<folderInfo id="com.ti.ccstudio.buildDefinitions.C2000.Debug.884053973.bsp" name="bsp" resourcePath="bsp">
