--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug/bsp/subdir_rules.mk=UTF-8
 encoding//Debug/bsp/subdir_vars.mk=UTF-8
+encoding//Debug/drivers/src/subdir_rules.mk=UTF-8
+encoding//Debug/drivers/src/subdir_vars.mk=UTF-8
 encoding//Debug/hal/src/subdir_rules.mk=UTF-8
 encoding//Debug/hal/src/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
