--- a/.cproject
+++ b/.cproject
@@ -132,6 +132,7 @@
 						<tool id="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.1487603176" name="C2000 Compiler" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951">
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH.472886763" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.INCLUDE_PATH" valueType="includePath">
 								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e"/>
+								<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/hal/inc}"/>
 								<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/drivers/inc}"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\libraries\math\IQmath\c28\include"/>
 								<listOptionValue builtIn="false" value="${PROJECT_LOC}/hal/inc"/>
