--- a/.project
+++ b/.project
@@ -36,6 +36,11 @@
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_CodeStartBranch.asm</location>
 		</link>
 		<link>
+			<name>bsp/F2837xD_CpuTimers.c</name>
+			<type>1</type>
+			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_CpuTimers.c</location>
+		</link>
+		<link>
 			<name>bsp/F2837xD_DefaultISR.c</name>
 			<type>1</type>
 			<location>C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/source/F2837xD_DefaultISR.c</location>
