--- a/.cproject
+++ b/.cproject
@@ -130,7 +130,7 @@
 					</fileInfo>
 					<fileInfo id="com.ti.ccstudio.buildDefinitions.C2000.Debug.884053973.1232671392" name="adc_hal.c" rcbsApplicability="disable" resourcePath="hal/src/adc_hal.c" toolsToInvoke="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.1861634671">
 						<tool id="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951.1861634671" name="C2000 Compiler" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.exe.compilerDebug.1418241951">
-							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE.1044436960" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE" valueType="includeFiles">
+							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE.1044436960" name="Specify a preinclude file (--preinclude)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE" valueType="includeFiles">
 								<listOptionValue builtIn="false" value="C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/include/F2837xD_defaultisr.h"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\common\include\F28x_Project.h"/>
 								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e/drivers/inc/encoder.h"/>
@@ -179,6 +179,7 @@
 							</option>
 							<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE.277400970" name="Specify a preinclude file (--preinclude)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.PREINCLUDE" valueType="includeFiles">
 								<listOptionValue builtIn="false" value="C:/ti/c2000/C2000Ware_4_03_00_00/device_support/f2837xd/common/include/F2837xD_defaultisr.h"/>
+								<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/helpers.h}"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\headers\include\F2837xD_sysctrl.h"/>
 								<listOptionValue builtIn="false" value="C:\ti\c2000\C2000Ware_4_03_00_00\device_support\f2837xd\headers\include\F2837xD_device.h"/>
 								<listOptionValue builtIn="false" value="C:/Users/Master/Desktop/ccs_extraction/!qepm_e/hal/inc/dac_hal.h"/>
